# db-2025

./: .gitignore  README.md  pyproject.toml
db_2025/ai_proxy/: model.py  repositories.py  usage.py
db_2025/async_/: basics.py
db_2025/basics/: .env.example  m.py  model.py  one.py  user_repo.py  web_app.py  zero.py
db_2025/basics/ddd/: aa.py
db_2025/common/: db.py  general.py
db_2025/migrator/: migrator.py  model.py
db_2025/sentence_vault/: a.py  import_book.py  migration_list.py  migration_runner.py  model.py  python_indices.py  repo.py  retries.py  sentence_analysis.py
db_2025/subscriptions/: app.py  migration_list.py  migration_runner.py  model.py  repo.py  x_test.py
db_2025/u2/: .env.example  model.py  repositories.py  uploader_migrations.py
db_2025/u2/migrations/: example_migration_list.py  migration_list.py  migrator.py  model.py
