[tool.poetry]
name = "db-2025"
version = "0.1.0"
description = ""
authors = ["Piotr Marecki <pmarecki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
argon2-cffi = "^23.1.0"
requests = "^2.31.0"
retry = "^0.9.2"
faker = "^26.0.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-aiohttp = "^1.0.5"
pytest-asyncio = "^0.23.6"
requests = "^2.31.0"
alembic = "^1.13.1"
#psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.2"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
